--- a/course22/requirements.txt
+++ b/course22/requirements.txt
@@ -1,9 +1,10 @@
 Django>=2.2
-django-debug-toolbar>=1.9.1
+django-debug-toolbar>=2.0.0
 pytz
 sqlparse
 wheel
 django-queryinspect>=1.0.0
 
 djangorestframework>=3.10.3
-raven
+#raven
+sentry-sdk>=0.13.0
